fix: fix commented code in css file

--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,10 @@ label {
   margin: .4rem 0;
 }
 
-/* html {
+html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-} */
+}
 
 .CV {
   margin-top: 20px;
