refactor: change all HTML and CSS, add animation

--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,304 @@
 * {
-  padding: 0;
-  margin: 0;
-  font-style: normal;
-  background-color: #dadadd;
-}
-
-label {
-  display: block;
-  font: 1rem normal;
-}
-
-input,
-label {
-  margin: .4rem 0;
-}
-
-html {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.CV {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  text-align: center;
+a {
+  color: rgb(125, 210, 250);
 }
 
-.hr {
-  border: none;
-  height: 5px;
- }
+.img {
+  max-width: 100%;
+}
 
-.line {
-  border-left: 2px solid #ccc;
-  margin-left: 10px;
-  padding-left: 5px;
+body {
+  background-color: #20202D;
+  margin: 0;
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  width: 90%;
+  max-width: 945px;
+  margin: auto;
 }
 
 .section {
-  margin: 1%;
+  padding-top: 64px;
+  padding-bottom: 9px;
 }
 
-.container{
-  margin: auto;
-  justify-content: center;
-  justify-content: flex-start;
-  justify-content: flex-end;
-  justify-content: space-around;
+.section-title {
+  margin: 0;
+  margin-bottom: 84px;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.hero {
+  padding-top: 50px;
+  padding-bottom: 155px;
+  background: linear-gradient(0deg, #000000 0.01%, rgba(0, 0, 0, 0) 95.44%);
+}
+
+.hero-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 105px;
+}
+
+.social-link {
+  margin-left: 20px;
+}
+
+.social-link:first-child {
+  margin-left: 0;
+}
+
+.hero-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hero-subtitle {
+  display: block;
+  font-size: 24px;
+  line-height: 28px;
+  color: #FFBB01;
+  margin-bottom: 14px;
+}
+
+.hero-title {
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 59px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.hero-description {
+  font-size: 16px;
+  line-height: 28px;
+  max-width: 420px;
+  margin-bottom: 38px;
+}
+
+.hero-avatar {
+  width: 389px;
+  height: 389px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  background-image: url('../img/avatar.jpg');
+  background-repeat: no-repeat;
+  background-position: center top -30px;
+  border: 13px solid #ffffff;
+}
+
+/* Skills */
+.features {
+  background-color: #000000;
+}
+
+.features-block {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.numbers {
-  padding-left: 30px;
+.features-item {
+  flex-basis: 30%;
+  margin-bottom: 63px;
 }
 
-.contacts-info, .tech-skills, .tech-skills-python, .responsibilities, .projects, .edu, .courses {
-  padding-left: 20px;
-}
-
-li.bold-titles {
-  font-weight: bold;
-}
-
-.photo {
-  width: 550px;
-  height: 389px;
-  background-color: #ffffff;
-  border-radius: 100%;
-  background-image: url('img/cv_photo.jpg');
-  background-repeat: no-repeat;
-  background-position: center top;
-  border: 13px solid #ffffff;
+.features-image {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 22px;
 }
 
-.block {
-  position: relative;
-  width: 1024px;
-  top: 44px;
-  margin: auto;
+.features-title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  margin: 0;
+  margin-bottom: 16px;
 }
 
-.footer {
-  margin-bottom: 60px;
+.features-text {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  margin: 0;
 }
 
-@media (max-width: 1024px) {
-  body {
-    background-color: #c7edf0;
+/* Contacts */
+.contacts {
+  background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 95.44%);
+}
+
+.contacts-text {
+  flex-basis: 40%;
+}
+
+.contacts-data {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 42px;
+}
+
+.contacts-phone, .contacts-mail, .contacts-linkedin {
+  flex-basis: 40%;
+  margin-bottom: 53px;
+}
+
+.contacts-title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.contacts-link {
+  text-decoration: none;
+  color: inherit;
+  margin-right: 37px;
+}
+
+.contacts-link:hover {
+  text-decoration: underline;
+}
+
+.social-links {
+  float: right;
+}
+
+/* Responsiveness */
+@media (max-width: 1100px) {
+  .hero-avatar {
+      width: 300px;
+      height: 300px;
+      border-width: 10px;
   }
+
+}
+
+@media (max-width: 836px) {
+  .hero-content {
+      flex-direction: column;
+  }
+  .hero-avatar {
+      order: 0;
+      width: 300px;
+      height: 300px;
+      border-width: 10px;
+      margin-bottom: 17px;
+  }
+
+  .hero-text {
+      order: 1;
+      text-align: center;
+  }
+
+  .features-item {
+      flex-basis: 45%;
+  }
+
+  .contacts-block {
+      align-items: flex-start;
+  }
+}
+
+@media (max-width: 564px) {
+
+  .hero {
+      padding-bottom: 75px;
+  }
+
+  .hero-avatar {
+      width: 113px;
+      height: 113px;
+      border-width: 4px;
+      background-size: 100%;
+      background-position: center top;
+  }
+
+  .hero-header {
+      margin-bottom: 38px;
+  }
+
+  .social-link {
+      margin-left: 5px;
+  }
+
+  .hero-title {
+      font-size: 24px;
+      line-height: 28px;
+  }
+
+  .hero-subtitle {
+      font-size: 16px;
+      line-height: 27px;
+      margin-bottom: 5px;
+  }
+
+  .hero-description {
+      font-size: 14px;
+      line-height: 140%;
+  }
+
+  .hero-birthday {
+      font-size: 14px;
+      line-height: 140%;
+  }
+
+  .hero-birthday-date {
+      font-size: 14px;
+      line-height: 140%;
+  }
+
+  .section {
+      padding: 60px 0;
+  }
+
+  .section-title {
+      font-size: 19px;
+      line-height: 22px;
+      margin-bottom: 60px;
+  }
+
+  .features-item {
+      flex-basis: 100%;
+      margin-bottom: 30px;
+  }
+
+  .features-title {
+      font-size: 18px;
+      line-height: 28px;
+  }
+
+  .features-text {
+      font-size: 14px;
+      line-height: 28px;
+  }
+
+  .contacts-phone, .contacts-mail {
+      flex-basis: 100%;
+      margin-bottom: 30px;
+  }
+
+  .contacts-title {
+      font-size: 18px;
+      line-height: 21px;
+  }
+
+  .contacts-link {
+      font-size: 14px;
+      line-height: 16px;
+      display: block;
+      margin-bottom: 13px;
+  }
+
 }
